--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+      content="viewport-fit=cover"
+    />
     %sveltekit.head%
   </head>
   <body>
