--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1"
+      content="width=device-width, initial-scale=1 maximum-scale=1.0, minimum-scale=1, user-scalable=0"
       content="viewport-fit=cover"
     />
     %sveltekit.head%
