--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
-    <link rel="stylesheet" href="%sveltekit.assets%/styles/global.scss">
+    <link rel="stylesheet" href="%sveltekit.assets%/styles/global.scss" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1.0, minimum-scale=1, user-scalable=0, viewport-fit=cover"
